--- a/AmpPhysicTests/AmpPhysicTests.csproj
+++ b/AmpPhysicTests/AmpPhysicTests.csproj
@@ -67,11 +67,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="InjectablePhysicContext.cs" />
     <Compile Include="PointKinematics.feature.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>PointKinematics.feature</DependentUpon>
     </Compile>
+    <Compile Include="PointKinematicsSteps.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PointStatics.feature.cs">
       <AutoGen>True</AutoGen>
