--- a/AmpPhysic/AmpPhysic.csproj
+++ b/AmpPhysic/AmpPhysic.csproj
@@ -45,15 +45,24 @@
     <Compile Include="Collision\CollisionEvent.cs" />
     <Compile Include="Collision\CollisionResponse.cs" />
     <Compile Include="Collision\CollisionResponser.cs" />
+    <Compile Include="Collision\CollisionSimplifiedScenario.cs" />
+    <Compile Include="Collision\Combinations\PointPointCollision.cs" />
+    <Compile Include="Collision\FastestCollision.cs" />
+    <Compile Include="Collision\Shapes\ColliderShape.cs" />
     <Compile Include="Collision\Shapes\Point.cs" />
+    <Compile Include="Collision\Shapes\PointColliderShape.cs" />
     <Compile Include="Collision\Shapes\TriangleCollision.cs" />
     <Compile Include="GameObject.cs" />
     <Compile Include="Collision\ICollisable.cs" />
     <Compile Include="Graphic\BasicBuilder.cs" />
     <Compile Include="Graphic\MeshBuilder.cs" />
+    <Compile Include="Interaction\AcceleratedDisplacement.cs" />
+    <Compile Include="Interaction\DisplacementSimplifier.cs" />
     <Compile Include="Interaction\Force.cs" />
     <Compile Include="Interaction\Friction.cs" />
     <Compile Include="Interaction\IControlledObject.cs" />
+    <Compile Include="Interaction\IDisplacement.cs" />
+    <Compile Include="Interaction\LinearDisplacement.cs" />
     <Compile Include="IPhysic.cs" />
     <Compile Include="IPhysicControl.cs" />
     <Compile Include="IPhysicShape.cs" />
@@ -69,5 +78,6 @@
     <Compile Include="Setup.cs" />
     <Compile Include="VirtualWorld.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
