--- a/AmpPhysicTests/AmpPhysicTests.csproj
+++ b/AmpPhysicTests/AmpPhysicTests.csproj
@@ -67,6 +67,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DisplacementSimplifier.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DisplacementSimplifier.feature</DependentUpon>
+    </Compile>
+    <Compile Include="DisplacementSimplifierSteps.cs" />
     <Compile Include="InjectablePhysicContext.cs" />
     <Compile Include="PointKinematics.feature.cs">
       <AutoGen>True</AutoGen>
@@ -84,6 +90,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="DisplacementSimplifier.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>DisplacementSimplifier.feature.cs</LastGenOutput>
+    </None>
     <None Include="Default.srprofile">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
